--- a/awesome-site/css/style.css
+++ b/awesome-site/css/style.css
@@ -11,6 +11,9 @@ body{
 /* Header */
 header {
     background: #2d2f31;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 
@@ -39,6 +42,7 @@ nav a:hover {
     border-bottom: 1px solid #ffffff;
 }
 
+
 /* ul */
 ul {
     font-family: "Roboto", "OpenSans-Light", Helvetica, Arial, sans-serif;
@@ -59,10 +63,12 @@ li {
     display: none;
 }
 
+
 /* Image */
 .top-image {
     width: 100%;
 }
+
 
 /* Services */
 .services {
@@ -75,6 +81,7 @@ li {
     display: flex;
     justify-content: center;
 }
+
 
 /* main-title */
 .main-title {
@@ -95,6 +102,7 @@ li {
     color: #616161;
     text-align: center;
 }
+
 
 /* row */
 .container-row {
@@ -120,6 +128,7 @@ li {
     font-size: 26px;
     margin: 8px 0;
 }
+
 
 /* portfolio */
 .portfolio-container {
@@ -166,6 +175,112 @@ li {
 }
 
 
+/* contact-form */
+.contact-form {
+    width: 70%;
+    margin: 50px auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.contact-form .col {
+    width: 50%;
+    margin-bottom: 25px;
+}
+
+.contact-form .col:nth-child(odd) {
+    border-right: none;
+}
+
+.contact-form .row-col {
+    width: 100%;
+}
+
+.contact-form input,
+.contact-form textarea {
+    border: 1px solid #afafaf;
+    padding: 15px;
+}
+
+.contact-form .sumbit {
+    margin-top: 25px;
+    background: #2d2f31;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 300;
+    font-family: inherit;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 250ms ease-in-out;
+}
+
+.contact-form .sumbit:hover {
+    background: #4c4c4c;
+}
+
+.contact-form .sumbit:active {
+    background: #2c3b4a;
+}
+
+
+/* footer */
+footer {
+    background: #2d2f31;
+    padding-bottom: 10px;
+}
+
+footer ul {
+    justify-content: center;
+}
+
+
+/* brand */
+.brand {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.brand span {
+    font-size: 42px;
+    font-weight: 400;
+    color: white;
+    font-family: "Roboto", "OpenSans-Light", Halvetica, Arial, sans-serif;
+    line-height: 1;
+    margin-left: 15px;
+}
+
+.brand img {
+    width: 35px;
+}
+
+
+/* social */
+.social  {
+    display: flex;
+    justify-content: center;
+}
+
+.social a {
+    margin: 10px;
+}
+
+.social img {
+    width: 30px;
+}
+
+
+/* copyright */
+.copyright {
+    font-size: 14px;
+    margin-top: 10px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.5)
+}
+
+
+
 
 
 
@@ -189,13 +304,32 @@ li {
         font-size: 20px;
     }
 
-    nav li {
+    header nav li {
         display: none;
         padding: 15px 0;
     }
 
     .portfolio-item{
         width: 50%;
+    }
+
+    ul {
+        position: absolute;
+        left: 0;
+        right: 0;
+        background: #2d2f31;
+        height: 0;
+        top: 57px;
+        transition: all 250ms ease-in-out;
+        flex-direction: column;
+    }
+
+    .responsive ul {
+        height: 200px;
+    }
+
+    .responsive li {
+        display: inline-block;
     }
 }
 
@@ -212,6 +346,19 @@ li {
 @media screen and (max-width: 576px) {
     .portfolio-item {
         width: 100%;
+    }
+
+    .contact-form .col:nth-child(odd) {
+        border: 1px solid #afafaf;
+    }
+
+    .contact-form .col {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+
+    .contact-form .sumbit {
+        font-size: 14px;
     }
 }
 
